# zipfile-deflate64

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_deflate64.py  test_zipfile.py
tests/data/: 100_lines.deflate64  100_lines.txt  100k_lines.deflate64  100k_lines.txt  10_lines.deflate64  10_lines.txt  10k_lines.deflate64  10k_lines.txt
zipfile_deflate64/: _deflate64.py  _zipfile.py
zipfile_deflate64/deflate64/: deflate64module.c
